welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:7: error: not found: value noDouble
  if (x==12 && noDouble){
               ^